--- a/RomanceHofProject/app/src/main/res/layout/fragment_home.xml
+++ b/RomanceHofProject/app/src/main/res/layout/fragment_home.xml
@@ -18,27 +18,188 @@
             android:orientation="vertical" >
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageView23"
+                        android:layout_width="67dp"
+                        android:layout_height="106dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/open" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView29"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/blackhansansregular"
+                        android:gravity="center_vertical"
+                        android:text="18:00 ~ 01:00"
+                        android:textColor="@color/blue"
+                        android:textSize="20dp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView32"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:fontFamily="@font/blackhansansregular"
+                android:gravity="center_horizontal"
+                android:text="여수낭만포차"
+                android:textColor="@color/white"
+                android:textSize="40dp" />
+
+            <TextView
+                android:id="@+id/textView33"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:gravity="center_horizontal"
+                android:text="Yeosu Romance Cartbar"
+                android:textColor="@color/white"
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/textView39"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/blackhansansregular"
+                android:gravity="center_horizontal"
+                android:text="이번주 드레스 코드"
+                android:textColor="@color/pink"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/textView40"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="Dress code 2020.08.05 - 2020.08.12"
+                android:textColor="@color/pink"
+                android:textSize="10dp" />
+
+            <TextView
+                android:id="@+id/textView41"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/blackhansansregular"
+                android:gravity="center_horizontal"
+                android:text="- RETRO -"
+                android:textColor="@color/colorAccent"
+                android:textSize="30dp" />
+
             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="match_parent"
-                android:layout_height="414dp"
+                android:layout_height="397dp"
                 android:layout_marginTop="30dp"
-                app:srcCompat="@drawable/cartbar1" />
+                android:layout_marginBottom="60dp"
+                app:srcCompat="@drawable/retro" />
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <TextView
+                android:id="@+id/textView43"
                 android:layout_width="match_parent"
-                android:layout_height="367dp"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/cartbar4" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:fontFamily="@font/blackhansansregular"
+                android:gravity="center_horizontal"
+                android:text="금일 버스킹 정보"
+                android:textColor="@color/pink"
+                android:textSize="20dp" />
 
-
-            <ImageView
-                android:id="@+id/imageView5"
+            <TextView
+                android:id="@+id/textView44"
                 android:layout_width="match_parent"
-                android:layout_height="409dp"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/cartbar5" />
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="Today's busking"
+                android:textColor="@color/pink"
+                android:textSize="10dp" />
+
+            <TextView
+                android:id="@+id/textView45"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/blackhansansregular"
+                android:gravity="center_horizontal"
+                android:text="- 버스커버스커 -"
+                android:textColor="@color/colorAccent"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/textView46"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/blackhansansregular"
+                android:gravity="center_horizontal"
+                android:text="- 허무현 -"
+                android:textColor="@color/colorAccent"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/textView47"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/blackhansansregular"
+                android:gravity="center_horizontal"
+                android:text="- 정수민 -"
+                android:textColor="@color/colorAccent"
+                android:textSize="30dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView30"
+                    android:layout_width="427dp"
+                    android:layout_height="431dp"
+                    android:src="@drawable/busker" />
+
+                <ImageView
+                    android:id="@+id/imageView31"
+                    android:layout_width="match_parent"
+                    android:layout_height="537dp"
+                    android:src="@drawable/buskerheo" />
+
+                <ImageView
+                    android:id="@+id/imageView33"
+                    android:layout_width="match_parent"
+                    android:layout_height="506dp"
+                    android:src="@drawable/busking" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 
