--- a/RomanceHofProject/app/src/main/res/values/colors.xml
+++ b/RomanceHofProject/app/src/main/res/values/colors.xml
@@ -3,6 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="white">#ffffff</color>
+    <color name="white">#ffffff</color>ffccff ff9900
     <color name="black">#000000</color>
+    <color name="yellow">#FFFF33</color>
+    <color name="flower">#FF9900</color>
+    <color name="pink">#FFCCFF</color>
+    <color name="green">#33FF00</color>
+    <color name="blue">#6699FF</color>
+    <color name="beige">#FFFFCC</color>
 </resources>
